# Kib512

./: README.md  calc_consts_kib512  calc_consts_kib512.py  gen_comp_values.cpp  kib512  kib512.cpp  kib512.ipynb  kib512.py  main.cpp  pyproject.toml  tckp64k1.spyx  valgrind-out.txt
.ipynb_checkpoints/: kib512-checkpoint.ipynb
Test Vector/: compression_test_vector.txt  pre_processing_test_vector.txt  test_vector_preprocessing
