[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "a hashing algorithm that I created myself. Not for professional use"
authors = ["Taha Canturk kibnakanoto@protonmail.com"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
qutip = "^4.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
